Replaced deprecated Class.newInstance() with Constructor.newInstance().
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>